refactor: update dependencies